--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,15 +3,34 @@
     android:layout_height="fill_parent"
     android:background="@android:color/white"
     android:orientation="vertical" >
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:paddingLeft="80dp"
+        android:paddingRight="5dp">
     <Spinner
 
         android:id="@+id/spinnerWeek"
-        android:layout_width="150dp"
+        android:layout_width="100dp"
         android:layout_gravity="center"
         android:layout_height="50dp"
-        android:paddingLeft="30dp"
+        android:layout_weight="2"
+        android:paddingLeft="60dp"
         android:entries="@array/weekNum" />
+
+        <Button
+            android:id="@+id/addClass"
+            android:layout_width="20sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#169ee5"
+            android:text="添加课程"
+            android:textColor="@android:color/white"
+            android:textSize="16sp" />
+    </LinearLayout>
     <ScrollView
         android:id="@+id/main_scrollview"
         android:layout_width="fill_parent"
@@ -26,5 +45,7 @@
             android:orientation="vertical" >
         </com.shallcheek.timetale.TimeTableView>
     </ScrollView>
+
+
 
 </LinearLayout>
