--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,7 +4,7 @@
     tools:context="com.shallcheek.timetale.MainActivity">
     <item
         android:id="@+id/main_screenshot"
-        android:showAsAction="withText"
-        android:title="添加课程" />
+        android:title="添加课程"
+        app:showAsAction="withText" />
 
 </menu>
